# super_ops

./: README.md  pyproject.toml
benchmark/: test_median.py
cuda/: CMakeLists.txt  README.md  add.cu  dispatch_test.py  main.cu  report1.nsys-rep  report1.sqlite
cuda/include/ops/: add.h  mm.h  sum.h
cuda/include/utils/: accuracy_utils.h  utils.h
cuda/src/: main.cu
cuda/src/ops/: add.cu  sum.cu
cuda/src/utils/: accuracy_utils.cu  utils.cu
cuda/tests/: test_add.cu  test_sum.cu
cuda/torch_bridge/: torch_bridge.cu
cuda/utils/: utils.cu  utils.h
src/super_ops/: __init__.py
src/super_ops/ops/triton/: TLE.md  median.py
super_ops/: __init__.py
super_ops/ops/: __init__.py  add.cu
tests/: test_add.py
triton/: __init__.py  median.py  topk.py
triton/median/: bench_median.py  median.py  test_median.py
triton/sort/: bitonic_sort.py
