[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super_ops"
version = "0.1.0"
description = "SuperOps is a collection of high-performance custom operators built with Triton."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10.0"
license = { text = "Apache Software License" }
authors = [
    { name = "xiadui", email = "xiadui_mx@163.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
]

[project.optional-dependencies]
nvidia = [
    "torch",
    "triton",
]
test = [
    "pytest>=9.0.2",
]

[project.urls]
Repository = "https://github.com/MuqiuX/super_ops"

[tool.setuptools.packages.find]
where = ["src"]
